Perform analysis of new datasets

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -35,7 +35,8 @@
     "#exp_name = '2020_12_18_stepper'; appendix = \"\"; distance = 51\n",
     "#exp_name = '2020_12_18_flying'; appendix=\"_new\"; distance = 0\n",
     "#exp_name = '2021_03_01_flying';\n",
-    "exp_name = '2021_04_30_hover';\n",
+    "#exp_name = '2021_04_30_hover';\n",
+    "exp_name = '2021_05_04_flying';\n",
     "fname = f'../experiments/{exp_name}/all_data.pkl'\n",
     "\n",
     "try:\n",
@@ -66,7 +67,7 @@
     "from plotting_tools import save_fig\n",
     "\n",
     "min_time = 0\n",
-    "max_time = 12\n",
+    "max_time = np.inf\n",
     "\n",
     "max_dist = 50 # cm\n",
     "for i, row in df_total.iterrows():\n",
@@ -155,6 +156,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from geometry import Context\n",
+    "context = Context.get_crazyflie_setup(dim=2)\n",
+    "context.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# choose the experiment to analyze\n",
     "row = df_total.iloc[0]"
    ]
@@ -173,14 +185,14 @@
     "    calib_function, calib_freq = get_calibration_function_median(\n",
     "        exp_name=\"2021_02_25_wall\", mic_type=\"audio_deck\", ax=ax\n",
     "    )\n",
-    "elif \"test\" in row.appendix:\n",
-    "    calib_function, calib_freq = get_calibration_function_median(\n",
-    "        \"2021_04_30_stepper\", \"audio_deck\", ax=ax\n",
-    "    )\n",
     "else:\n",
     "    calib_function, calib_freq = get_calibration_function_median(\n",
-    "        exp_name=\"2021_02_23_wall\", mic_type=\"audio_deck\", ax=ax\n",
-    "    )"
+    "        \"2021_04_30_stepper\", \"audio_deck\", ax=ax, #fit_one_gain=True \n",
+    "    )\n",
+    "#else:\n",
+    "#    calib_function, calib_freq = get_calibration_function_median(\n",
+    "#        exp_name=\"2021_02_23_wall\", mic_type=\"audio_deck\", ax=ax\n",
+    "#    )\n"
    ]
   },
   {
@@ -193,18 +205,36 @@
    "source": [
     "# spec_masked, freqs_masked = data_collector.fill_from_row()\n",
     "from data_collector import DataCollector\n",
+    "from estimators import DistanceEstimator\n",
     "from inference import get_probability_bayes\n",
     "from simulation import get_freq_slice_theory\n",
+    "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
     "\n",
-    "nominal_distance = 42\n",
+    "starting_distance = 60  # [50, 30, 10]\n",
+    "nominal_distances = [60-i*20 for i in range(3)]\n",
+    "slice_idx = 0\n",
+    "\n",
+    "distance_range = [0, 70]\n",
+    "azimuth_deg = WALL_ANGLE_DEG\n",
+    "\n",
     "data_collector = DataCollector(exp_name=exp_name)\n",
     "\n",
     "signals_f_all = row.stft\n",
     "frequencies_all = row.frequencies_matrix\n",
     "positions_all = row.positions\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
+    "fig, ax_distance = plt.subplots()\n",
     "fig.set_size_inches(10, 5)\n",
+    "ax_distance.set_xlabel(\"time idx\")\n",
+    "ax_distance.set_ylabel(\"distance [cm]\")\n",
+    "ax_distance.axhline(starting_distance, label=\"starting distance\", ls=\":\")\n",
+    "ax_distance.set_title(f\"experiment {row.appendix}\")\n",
+    "\n",
+    "fig, ax_total = plt.subplots()\n",
+    "fig.set_size_inches(10, 5)\n",
+    "ax_total.set_xlabel(\"distance [cm]\")\n",
+    "ax_total.set_ylabel(\"probability\")\n",
+    "ax_total.set_title(f\"experiment {row.appendix}\")\n",
     "\n",
     "freqs_calib = np.linspace(np.min(frequencies_all), np.max(frequencies_all), 30)\n",
     "f_calib_all = calib_function(freqs_calib)\n",
@@ -212,80 +242,101 @@
     "for i in range(signals_f_all.shape[0]):\n",
     "    signals_f = signals_f_all[i]\n",
     "    frequencies = frequencies_all[i]\n",
+    "\n",
+    "    if i == signals_f_all.shape[0] - 1:\n",
+    "        sweep_complete = True\n",
+    "    else:\n",
+    "        sweep_complete = data_collector.detect_sweep(signals_f, frequencies)\n",
+    "\n",
+    "    if sweep_complete:\n",
+    "        f_slice, freqs, stds, d_slice = data_collector.get_current_frequency_slice(\n",
+    "            verbose=False\n",
+    "        )\n",
+    "\n",
+    "        fig, axs = plt.subplots(3, signals_f_all.shape[1])  # , sharey='row')\n",
+    "        fig.set_size_inches(15, 10)\n",
+    "        fig.suptitle(f\"up to {data_collector.latest_time:.1f}s\", y=0.9)\n",
+    "        #fig.set_suptitle(f\"experiment {row.appendix}\")\n",
+    "        \n",
+    "        # extract valid indices\n",
+    "        valid_idx = (\n",
+    "            (freqs >= min(calib_function.x))\n",
+    "            & (freqs <= max(calib_function.x))\n",
+    "            & ((3800 <= freqs) | (freqs <= 3700))\n",
+    "        )\n",
+    "        freqs = freqs[valid_idx]\n",
+    "        f_calib = calib_function(freqs)\n",
+    "        f_slice = f_slice[:, valid_idx]\n",
+    "        d_slice = d_slice[valid_idx]\n",
+    "        \n",
+    "        distance_corr = starting_distance - (d_slice * 1e2)\n",
+    "\n",
+    "        f_theo = get_freq_slice_theory(\n",
+    "            freqs, distance_cm=nominal_distances[slice_idx], azimuth_deg=azimuth_deg\n",
+    "        ).T  # n_mics x n_freqs\n",
+    "        f_theo_corr = get_freq_slice_theory(\n",
+    "            freqs, distance_cm=distance_corr, azimuth_deg=azimuth_deg\n",
+    "        ).T\n",
+    "\n",
+    "        print(\"new frequency slice!\")\n",
+    "\n",
+    "        distance_estimator = DistanceEstimator()\n",
+    "\n",
+    "        for i_mic in range(f_slice.shape[0]):\n",
+    "            axs[0, i_mic].plot(freqs, f_slice[i_mic], label=\"measured\")\n",
+    "            axs[0, i_mic].legend(loc=\"upper right\")\n",
+    "\n",
+    "            f_calibrated = f_slice[i_mic] / f_calib[i_mic]\n",
+    "\n",
+    "            axs[1, i_mic].plot(freqs, f_calibrated, label=\"measured\", ls=\"-\")\n",
+    "            axs[1, i_mic].plot(freqs, f_theo[i_mic], label=\"theo\", color=f\"C6\", ls=\":\")\n",
+    "            axs[1, i_mic].plot(\n",
+    "                freqs, f_theo_corr[i_mic], label=\"theo corr\", color=\"C7\", ls=\"-.\"\n",
+    "            )\n",
+    "            axs[0, i_mic].set_title(f\"mic{i_mic}\")\n",
+    "\n",
+    "            # get probability distribution\n",
+    "            distances_bayes, proba, diff_bayes = get_probability_bayes(\n",
+    "                f_calibrated[~np.isnan(f_calibrated)],\n",
+    "                freqs[~np.isnan(f_calibrated)],\n",
+    "                mic_idx=i_mic,\n",
+    "                distance_range=distance_range,\n",
+    "                sigma=1.0,\n",
+    "                azimuth_deg=azimuth_deg\n",
+    "            )\n",
+    "            EPS = 1e-10\n",
+    "            proba = (proba - np.min(proba) + EPS) / (\n",
+    "                np.max(proba) - np.min(proba) + EPS\n",
+    "            )\n",
+    "            distance_estimator.add_distribution(diff_bayes * 1e-2, proba, mic_idx)\n",
+    "\n",
+    "            axs[2, i_mic].plot(\n",
+    "                # diff_bayes, proba\n",
+    "                distances_bayes,\n",
+    "                proba,\n",
+    "            )\n",
+    "\n",
+    "        distance_total, proba_total = distance_estimator.get_distance_distribution(\n",
+    "            method=\"sum\", chosen_mics=[0, 1, 3], azimuth_deg=azimuth_deg\n",
+    "        )\n",
+    "\n",
+    "        ax_total.plot(\n",
+    "            distance_total * 1e2, proba_total, label=f\"d={nominal_distances[slice_idx]}cm\"\n",
+    "        )\n",
+    "\n",
+    "        axs[1, i_mic].legend()\n",
+    "        ax_distance.plot(distance_corr, label=nominal_distances[slice_idx])\n",
+    "\n",
+    "        for i_mic in range(f_calib_all.shape[0]):\n",
+    "            axs[0, i_mic].plot(freqs_calib, f_calib_all[i_mic], label=f\"calib\", ls=\":\")\n",
+    "        slice_idx += 1\n",
+    "\n",
     "    data_collector.fill_from_signal(\n",
     "        signals_f, frequencies, distance=positions_all[i, 1], time=row.seconds[i]\n",
     "    )\n",
     "\n",
-    "    # also analyze the remaining data.\n",
-    "    if i < signals_f_all.shape[0] - 1:\n",
-    "        f_slice, freqs, stds, d_slice = data_collector.get_current_frequency_slice(\n",
-    "            n_required=16, verbose=False\n",
-    "        )\n",
-    "    else:\n",
-    "        f_slice, freqs, stds, d_slice = data_collector.get_current_frequency_slice(\n",
-    "            n_required=None, verbose=False\n",
-    "        )\n",
-    "\n",
-    "    if f_slice is not None:\n",
-    "        fig, axs = plt.subplots(3, signals_f_all.shape[1], sharey='row')\n",
-    "        fig.set_size_inches(15, 10)\n",
-    "        fig.suptitle(f\"up to {data_collector.latest_time:.1f}s\", y=0.9)\n",
-    "        \n",
-    "        valid_idx = (freqs >= min(calib_function.x)) & (freqs <= max(calib_function.x))\n",
-    "            \n",
-    "        freqs = freqs[valid_idx]\n",
-    "        \n",
-    "        f_calib = calib_function(freqs)\n",
-    "        f_slice = f_slice[:, valid_idx]\n",
-    "        d_slice = d_slice[valid_idx]\n",
-    "        distance_corr = nominal_distance + (d_slice * 1e2)\n",
-    "        \n",
-    "        f_theo = get_freq_slice_theory(\n",
-    "            freqs, distance_cm=nominal_distance\n",
-    "        ).T  # n_mics x n_freqs\n",
-    "        f_theo_corr = get_freq_slice_theory(freqs, distance_cm=distance_corr).T\n",
-    "\n",
-    "        print(\"new frequency slice!\")\n",
-    "        for i_mic in range(f_slice.shape[0]):\n",
-    "            axs[0, i_mic].plot(freqs, f_slice[i_mic], label='measured')\n",
-    "            axs[0, i_mic].legend(loc=\"upper right\")\n",
-    "            \n",
-    "            f_calibrated = f_slice[i_mic] / f_calib[i_mic]\n",
-    "\n",
-    "            axs[1, i_mic].plot(\n",
-    "                freqs, f_calibrated, label='measured', ls='-'\n",
-    "            )\n",
-    "            axs[1, i_mic].plot(\n",
-    "                freqs, f_theo[i_mic], label='theo', color=f\"C6\", ls=':'\n",
-    "            )\n",
-    "            axs[1, i_mic].plot(\n",
-    "                freqs, f_theo_corr[i_mic], label='theo corr', color=\"C7\", ls='-.'\n",
-    "            )\n",
-    "            axs[0, i_mic].set_title(f'mic{i_mic}')\n",
-    "            \n",
-    "            \n",
-    "            # get probability distribution\n",
-    "            distances_bayes, proba, diff_bayes = get_probability_bayes(\n",
-    "                f_calibrated,\n",
-    "                freqs, \n",
-    "                mic_idx=0,\n",
-    "                distance_range=[20, 60],\n",
-    "                sigma=1.0\n",
-    "            )\n",
-    "            axs[2, i_mic].plot(\n",
-    "                diff_bayes, proba \n",
-    "            )\n",
-    "            \n",
-    "        axs[1, i_mic].legend()\n",
-    "        ax.plot(distance_corr, label=label)\n",
-    "        ax.axhline(nominal_distance)\n",
-    "        \n",
-    "        for i_mic in range(f_calib_all.shape[0]):\n",
-    "            axs[0, i_mic].plot(freqs_calib, f_calib_all[i_mic], label=f\"calib\", ls=\":\")\n",
-    "\n",
-    "ax.set_xlabel(\"time idx\")\n",
-    "ax.set_ylabel(\"rel. movement [cm]\")\n",
-    "ax.legend(loc=\"upper right\")"
+    "ax_distance.legend(loc=\"upper right\")\n",
+    "ax_total.legend(loc=\"upper right\")"
    ]
   },
   {
@@ -297,148 +348,17 @@
     "from dataset_parameters import kwargs_datasets\n",
     "from simulation import get_df_theory\n",
     "\n",
-    "nominal_distance = 42 #in cm \n",
+    "distances_grid = np.arange(distance_range[0]+10, distance_range[1])\n",
+    "\n",
     "kwargs = kwargs_datasets[exp_name][\"audio_deck\"]\n",
-    "\n",
-    "distances_grid = np.arange(20, 60)\n",
     "freqs_theo = np.linspace(kwargs[\"min_freq\"], kwargs[\"max_freq\"], 100)\n",
-    "df_matrix_theo = get_df_theory(freqs_theo, distances_grid, mic_idx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from data_collector import DataCollector\n",
-    "from inference import get_probability_cost, get_probability_fft\n",
-    "from frequency_analysis import get_index_matrix\n",
-    "from plotting_tools import add_colorbar\n",
     "\n",
-    "if 'newbuzzer' in row.appendix: \n",
-    "    calib_function = calib_function_new\n",
-    "    calib_freq = calib_freq_new\n",
-    "elif 'test1' in row.appendix:\n",
-    "    calib_function = calib_function_v3\n",
-    "    calib_freq = calib_freq_v3\n",
-    "else:\n",
-    "    calib_function = calib_function_old\n",
-    "    calib_freq = calib_freq_old\n",
-    "\n",
-    "time_mask = (row.seconds > kwargs[\"min_time\"]) & (row.seconds < kwargs[\"max_time\"]) \n",
-    "f_slice_theory = get_freq_slice_theory(freqs, distance_cm=nominal_distance)\n",
-    "f_slice_theory_corr = get_freq_slice_theory(freqs, distance_cm=distances_corr)\n",
-    "\n",
-    "#f_slice, freqs, stds = data_collector.get_frequency_slice()\n",
-    "#f_slice, freqs, stds = data_collector.get_frequency_slice_fixed(frequencies=calib_freq)\n",
-    "f_slice = f_slice[mic_idx]\n",
-    "f_calib = calib_function(freqs)[mic_idx]\n",
-    "\n",
-    "fig, ax_slices = plt.subplots()\n",
-    "ax_slices.errorbar(freqs, f_slice, label='raw', yerr=stds[mic_idx])\n",
-    "ax_slices.plot(freqs, f_calib, label='calibration curve')\n",
-    "ax_slices.legend()\n",
-    "\n",
+    "df_matrix_theo = get_df_theory(freqs_theo, distances_grid, azimuth_deg=azimuth_deg+1, \n",
+    "                               chosen_mics=[mic_idx])\n",
     "fig, ax = plt.subplots()\n",
-    "fig.set_size_inches(5, 5)\n",
-    "ax.plot(freqs, f_slice/f_calib, label='calibrated')\n",
-    "ax.plot(freqs, f_slice_theory, label='theory')\n",
-    "ax.plot(freqs, f_slice_theory_corr, label='theory, corrected')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    ### extract varying slice ### \n",
-    "    #index_matrix = get_index_matrix(spec_masked)\n",
-    "    #strongest_freqs = freqs_masked[index_matrix[0, :]]\n",
-    "    #f_slice_varying = [spec_masked[f_idx, mic_idx, idx] for idx, f_idx in enumerate(index_matrix[0, :])]\n",
-    "    relative_ds = -row.positions[time_mask, 1] * 100\n",
-    "    absolute_yaws = row.positions[time_mask, 3]\n",
-    "    distances_y = nominal_distance + relative_ds\n",
-    "\n",
-    "    fig, axs = plt.subplots(2, 1)\n",
-    "    fig.set_size_inches(10, 5)\n",
-    "    f_slice_norm -= np.mean(f_slice_norm)\n",
-    "    f_slice_norm /= np.std(f_slice_norm)\n",
-    "    f_slice_varying -= np.mean(f_slice_varying)\n",
-    "    f_slice_varying /= np.std(f_slice_varying)\n",
-    "    f_slice_varying_theory -= np.mean(f_slice_theory)\n",
-    "    f_slice_varying_theory /= np.std(f_slice_theory)\n",
-    "    f_slice_varying_norm -= np.mean(f_slice_varying_norm)\n",
-    "    f_slice_varying_norm /= np.std(f_slice_varying_norm)\n",
-    "\n",
-    "    axs[0].plot(seconds, f_slice_varying, label='experimental')\n",
-    "    axs[0].plot(seconds, f_slice_varying_norm, label='experimental calibrated')\n",
-    "    axs[0].plot(seconds, f_slice_varying_theory, label='theoretical')\n",
-    "    axs[0].legend()\n",
-    "    axs[0].grid(which='both')\n",
-    "    axs[1].plot(seconds, strongest_freqs)\n",
-    "    axs[1].grid(which='both')\n",
-    "\n",
-    "\n",
-    "    ##### algorithm #####\n",
-    "    #proba_cost = get_probability_cost(\n",
-    "    #    f_slice, freqs, distances_grid, mic_idx=mic_idx\n",
-    "    #)\n",
-    "    #proba_cost_norm = get_probability_cost(\n",
-    "    #    f_slice_norm, freqs, distances_grid, mic_idx=mic_idx\n",
-    "    #)\n",
-    "    proba_cost_mvmt = get_probability_cost(\n",
-    "        f_slice_varying, strongest_freqs, distances_grid, mic_idx=mic_idx, relative_ds=relative_ds, absolute_yaws=absolute_yaws\n",
-    "    )\n",
-    "    proba_cost_mvmt_norm = get_probability_cost(\n",
-    "        f_slice_varying_norm, strongest_freqs, distances_grid, mic_idx=mic_idx, relative_ds=relative_ds, absolute_yaws=absolute_yaws\n",
-    "    )\n",
-    "    proba_cost_mvmt_theory = get_probability_cost(\n",
-    "        f_slice_varying_theory, strongest_freqs, distances_grid, mic_idx=mic_idx, relative_ds=relative_ds, absolute_yaws=absolute_yaws\n",
-    "    )\n",
-    "    fig_cost, ax_proba_cost = plt.subplots()\n",
-    "    fig.set_size_inches(5, 5)\n",
-    "    #ax_proba_cost.plot(distances_grid, proba_cost, label=label)\n",
-    "    #ax_proba_cost.plot(distances_grid, proba_cost_norm, label=label + ' calibrated')\n",
-    "    ax_proba_cost.plot(distances_grid, proba_cost_mvmt, label=label)\n",
-    "    ax_proba_cost.plot(distances_grid, proba_cost_mvmt_norm, label=label + ' calibrated')\n",
-    "    ax_proba_cost.plot(distances_grid, proba_cost_mvmt_theory, label=label + ' theory')\n",
-    "    ax_proba_cost.axvline(nominal_distance, label=f'ground truth {label}', color='black')\n",
-    "    ax_proba_cost.legend(loc='upper left', bbox_to_anchor=[1.0, 1.0]) \n",
-    "    ax_proba_cost.set_ylabel('probability')\n",
-    "    ax_proba_cost.set_xlabel('distance [cm]')\n",
-    "    ax_proba_cost.set_yscale('log')\n",
-    "\n",
-    "    ### full df ###\n",
-    "    fig, ax = plt.subplots()\n",
-    "    ax.pcolorfast(distances_grid, frequencies, df_matrix_theo[:-1, :-1])\n",
-    "    ax.scatter(distances_y, strongest_freqs, color='C1', s=5)\n",
-    "    ax.axvline(nominal_distance, color='C1')\n",
-    "    ax.set_ylim(min(frequencies), max(frequencies))\n",
-    "    ax.set_title(f'DF of mic{mic_idx}, {label}')\n",
-    "    ax.set_xlabel('distance [cm]')\n",
-    "    ax.set_ylabel('frequency [Hz]')\n",
-    "    save_fig(fig, f'plots/{exp_name}{row.appendix}_df.pdf')\n",
-    "\n",
-    "    ### small df ###\n",
-    "    #d_sorted = np.sort(distances_y)\n",
-    "    #f_sorted = np.sort(strongest_freqs)\n",
-    "    d_sorted = np.arange(min(distances_y), max(distances_y), step=0.1) #np.sort(distances_y)\n",
-    "    f_sorted = np.arange(min(strongest_freqs), max(strongest_freqs), step=50) #np.sort(strongest_freqs)\n",
-    "    df_small = get_df_theory(f_sorted, d_sorted, mic_idx)\n",
-    "    fig, axs = plt.subplots(1, 2, sharey=True)\n",
-    "    axs[0].pcolorfast(d_sorted, f_sorted, df_small[:-1, :-1])\n",
-    "\n",
-    "    frequency_indices = np.argmin(np.abs(f_sorted[:, None] - strongest_freqs[None, :]), axis=0)\n",
-    "    #np.testing.assert_allclose(f_sorted[frequency_indices], strongest_freqs)\n",
-    "    distance_indices = np.argmin(np.abs(d_sorted[:, None] - distances_y[None, :]), axis=0)\n",
-    "    df_small[frequency_indices, distance_indices] = f_slice_varying\n",
-    "    axs[1].pcolorfast(d_sorted, f_sorted, df_small[:-1, :-1])\n",
-    "\n",
-    "#ax_proba_fft.set_xlim(min(distances_grid), max(distances_grid))\n",
-    "#save_fig(fig_cost, f'plots/{exp_name}{appendix_plot}_cost.pdf')\n",
-    "ax_slices.legend(loc='upper left')"
+    "pcolorfast_custom(ax, distances_grid, freqs_theo, np.log10(df_matrix_theo[0]))\n",
+    "ax.set_yticklabels([''])\n",
+    "ax.set_xticklabels([''])"
    ]
   },
   {
