--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -35,18 +35,22 @@
     "from simulation import get_setup\n",
     "from plotting_tools import save_fig\n",
     "\n",
+    "from crazyflie_description_py.experiments import WALL_ANGLE_DEG_STEPPER\n",
+    "\n",
     "plot_dir = 'plots/experiments'\n",
     "\n",
     "distance = 15\n",
-    "azimuths = [0, 15, 30]\n",
+    "yaws = np.array([0, 15, 30])\n",
+    "azimuth_deg = WALL_ANGLE_DEG_STEPPER\n",
+    "print(azimuths)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(5, 5)\n",
-    "source, mic_positions = get_setup(distance_cm=distance, azimuth_deg=azimuths[0])\n",
-    "[ax.scatter(*mic[:2], label=f'mic{i}, $\\\\theta=${azimuths[0]}$^\\\\circ$', marker='x') for i, mic in enumerate(mic_positions)]\n",
-    "for azimuth_deg in azimuths[1:]:\n",
-    "    source, mic_positions = get_setup(distance_cm=distance, azimuth_deg=azimuth_deg, ax=ax)\n",
-    "ax.set_title(f\"wall distance $d=${distance}cm and angle $\\\\theta$={azimuths}deg\")\n",
+    "source, mic_positions = get_setup(distance_cm=distance, azimuth_deg=azimuth_deg-yaws[0])\n",
+    "[ax.scatter(*mic[:2], label=f'mic{i}, $\\\\theta=${azimuth_deg-yaws[0]}$^\\\\circ$', marker='x') for i, mic in enumerate(mic_positions)]\n",
+    "for yaw_deg in yaws[1:]:\n",
+    "    source, mic_positions = get_setup(distance_cm=distance, azimuth_deg=azimuth_deg-yaw_deg, ax=ax)\n",
+    "ax.set_title(f\"wall distance $d=${distance}cm and drone angles $\\\\theta$={yaws}deg\")\n",
     "handles, labels = ax.get_legend_handles_labels()\n",
     "h_mics = {l: h for h, l in zip(handles, labels) if '\\\\theta' in l}\n",
     "l1 = ax.legend(h_mics.values(), h_mics.keys(),loc=\"lower right\", bbox_to_anchor=[.5, 0])\n",
@@ -163,6 +167,7 @@
    },
    "outputs": [],
    "source": [
+    "from crazyflie_description_py.experiments import WALL_ANGLE_DEG_STEPPER\n",
     "from simulation import get_dist_slice_theory\n",
     "from copy import deepcopy\n",
     "from pandas_utils import fill_nans\n",
@@ -213,7 +218,7 @@
     "    slice_exp = df_matrix[:, i, :]\n",
     "    if np.any(np.isnan(slice_exp)):\n",
     "        slice_exp = fill_nans(slice_exp, df_dist)\n",
-    "    slice_the = get_dist_slice_theory(f, df_dist).T\n",
+    "    slice_the = get_dist_slice_theory(f, df_dist, azimuth_deg=WALL_ANGLE_DEG_STEPPER).T\n",
     "    \n",
     "    fig_f = plot_ffts(\n",
     "        slice_exp=slice_exp,\n",
@@ -243,6 +248,8 @@
     "from estimators import get_estimate\n",
     "from simulation import factor_distance_to_delta\n",
     "\n",
+    "azimuth_deg = WALL_ANGLE_DEG_STEPPER\n",
+    "\n",
     "titles = {\n",
     "    'cost': 'optimization-based method',\n",
     "    'bayes': 'FFT-based method',\n",
@@ -256,12 +263,14 @@
     "print(rel_movement_cm)\n",
     "factors = {mic:factor_distance_to_delta(d1, \n",
     "                                        rel_movement_cm, \n",
-    "                                        mic) for mic in range(4)}\n",
+    "                                        mic, azimuth_deg=azimuth_deg) \n",
+    "           for mic in range(4)}\n",
     "print('factors:\\n', factors)\n",
     "dN = df_dist[0] # starting distance of distance slice. \n",
     "factors_min = {mic:factor_distance_to_delta(dN, \n",
     "                                        rel_movement_cm, \n",
-    "                                        mic) for mic in range(4)}\n",
+    "                                        mic, azimuth_deg=azimuth_deg) \n",
+    "               for mic in range(4)}\n",
     "print('factors_min:\\n', factors_min)\n",
     "\n",
     "start_distances_grid = [max(df_dist) + i for i in [0, 10, 20]]\n",
@@ -298,6 +307,7 @@
     "                    start_distances_grid,\n",
     "                    gammas_grid,\n",
     "                    mic_idx=mic_idx,\n",
+    "                    azimuth_deg=azimuth_deg\n",
     "                )  # is of shape n_start_distances x n_gammas_grid\n",
     "                gammas = gammas_grid\n",
     "\n",
@@ -527,28 +537,46 @@
     "                #df = results.loc[results.normalization == method]\n",
     "                \n",
     "                if method == \"theoretical\": \n",
-    "                    slice_exp = get_freq_slice_theory(df_freq, distance, chosen_mics=[mic_idx])\n",
+    "                    slice_exp = get_freq_slice_theory(df_freq, distance, chosen_mics=[mic_idx], \n",
+    "                                                      azimuth_deg=azimuth_deg)\n",
     "                    slice_exp = slice_exp[:, 0]\n",
     "                    std = 1\n",
     "                else:\n",
     "                    slice_exp, freqs, stds = data_collector.get_frequency_slice_fixed(\n",
-    "                        df_freq, distance, mics=[mic_idx])\n",
+    "                        df_freq, distance, mics=[mic_idx], normalize_method=normalize_method\n",
+    "                    )\n",
+    "                    #slice_exp, freqs, stds = data_collector.get_frequency_slice_old(\n",
+    "                    #    df_freq, distance, mics=[mic_idx], normalize_method=normalize_method\n",
+    "                    #)\n",
+    "                    #if normalize_method != \"\":\n",
+    "                    #    slice_exp = data_collector.calibrate_f_slice(slice_exp, freqs, normalize_method, mic_idx)\n",
     "                    slice_exp = slice_exp[0]\n",
     "                    std = stds[0]\n",
+    "                    #plt.figure()\n",
+    "                    #plt.plot(freqs, slice_exp)\n",
+    "                    \n",
     "                #slice_exp = fill_nans(slice_exp, freqs)\n",
     "                proba_cost = get_probability_cost(\n",
     "                    slice_exp, freqs, \n",
-    "                    distances_grid, mic_idx=mic_idx\n",
+    "                    distances_grid, mic_idx=mic_idx,\n",
+    "                    azimuth_deg=azimuth_deg\n",
     "                )\n",
     "                distances_bayes, proba_bayes, diff_bayes = get_probability_bayes(\n",
     "                    slice_exp,\n",
     "                    freqs, \n",
     "                    mic_idx=mic_idx,\n",
     "                    distance_range=[min(distances_grid), max(distances_grid)],\n",
-    "                    sigma=std\n",
+    "                    sigma=std,\n",
+    "                    azimuth_deg=azimuth_deg\n",
     "                )\n",
     "                \n",
-    "                distance_estimators[method].add_distribution(diff_bayes * 1e-2, proba_bayes, mic_idx)\n",
+    "                EPS = 1e-10\n",
+    "                proba_bayes_norm = (proba_bayes - np.min(proba_bayes) + EPS) / (np.max(proba_bayes) - np.min(proba_bayes) + EPS)\n",
+    "                distance_estimators[method].add_distribution(\n",
+    "                    diff_bayes * 1e-2, \n",
+    "                    proba_bayes_norm, \n",
+    "                    mic_idx\n",
+    "                )\n",
     "\n",
     "                for algo, proba, distances_here in zip(\n",
     "                    [\"cost\", \"bayes\"],\n",
@@ -564,16 +592,21 @@
     "                        'algorithm': algo\n",
     "                    }\n",
     "                    \n",
-    "        #for method, distance_estimator in distance_estimators.items():\n",
-    "        #    distances_here, proba = distance_estimator.get_distance_distribution()\n",
-    "        #    d = get_estimate(distances_here, proba) * 1e2\n",
-    "        #    err_df.loc[len(err_df), :] = {\n",
-    "        #        'error': d - distance,\n",
-    "        #        'mic': 'all',\n",
-    "        #        'distance': distance,\n",
-    "        #        'method': method, \n",
-    "        #        'algorithm': 'bayes-combination' \n",
-    "        #    }"
+    "        for method, distance_estimator in distance_estimators.items():\n",
+    "            \n",
+    "            # TODO(FD) remove azimuth_deg here\n",
+    "            distances_here, proba = distance_estimator.get_distance_distribution(\n",
+    "                method='sum', # figure out why product doesn't work\n",
+    "                azimuth_deg=azimuth_deg\n",
+    "            )\n",
+    "            d = get_estimate(distances_here, proba) * 1e2\n",
+    "            err_df.loc[len(err_df), :] = {\n",
+    "                'error': d - distance,\n",
+    "                'mic': 'all',\n",
+    "                'distance': distance,\n",
+    "                'method': method, \n",
+    "                'algorithm': 'bayes-combination' \n",
+    "            }"
    ]
   },
   {
@@ -593,8 +626,6 @@
     "        absolute_err = pd.pivot_table(df_mic, index=\"distance\", values=\"error\", columns=\"method\")\n",
     "        fig, axs = plot_performance(absolute_err, xs=distances, xlabel=\"distance [cm]\", ylabel=\"absolute error [cm]\")\n",
     "        axs[0, 0].grid()\n",
-    "        #axs[0, 0].set_title(f'mic{mic}, {titles[key]}')\n",
-    "        #axs[0, 1].set_title(f'mic{mic}, {titles[key]}')\n",
     "        fig.suptitle(f'microphone: {mic}, {titles[key]}')\n",
     "        axs[0, 1].set_xlim(-1, max(distances))\n",
     "        \n",
